	* apps/examples/nettest: May now be built as an NSH built-in application
	  by setting CONFIG_NSH_BUILTIN_APPS.
	* apps/examples/nettest: Correct some build issues with the nettest is
	  built for performance evaluation.
	* apps/examples/adc:  Add a very simple test to drive and test an ADC
	  driver.
	* apps/examples/pwm:  Add an NSH PWM command to drive and test a PWM
	  driver.
	* apps/examples/can:  Add an NSH CAN command to drive and test a CAN
	  driver in loopback mode.

6.14 2012-01-15 Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/buttons/main.c:  The test needs to call up_buttoninit() to
	  properly configure the button interrupt GPIOs.
	* apps/examples/pwm:  Add support to test the pulse count option recently
	  added to the PWM interface.

6.15 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/nshlib/nsh_serial.c and nsh_usbdev.c:  If NuttX is configured to use
	  a USB serial console, then NSH needs to wait until the USB console is
	  connected and available.
	* apps/examples/composite:  Add a test of the USB composite device.
	* apps/examples/telnetd:  Move the tiny uIP shell example from
	  netutils/telnetd to examples/telnetd.  Enhanced the telnetd daemon so that
	  it supports telnetd via a TTY device driver: A new TTY device driver is
	  created when each new telnet connection is created.  The shell thread
	  is started with stdin, stdout, and stderror mapped to the TTY device.
	* netutils/telnetd:  The old uIP telnet demo is gone.  In its place is a new
	  telnet infrastructure. The new telnet daemon creates sessions that are
	  "wrapped" as character devices and mapped to stdin, stdout, and stderr.
	  Now the telnet session can be inherited by spawned tasks.
	* examples/telnetd:  Add a test for the new telnet daemon.
	* examplex/telnetd/telnetd_driver.c: Move the internal socket structure from
	  the daemon's socket array into the driver's state data so that it will be
	  independent from the the telnetd daemon.
